# Comfyui_SSsnap_pose-Remapping

./: DiffCalculator.py  README.md  __init__.py  apply_diss_pose.py  convertPoseToStandardFormat.py  frame_cau.py  pyproject.toml  ratio_cau.py  render_kps.py  scaled_diff.py  test.py  文件.py  缩放前.json  缩放后.json
.github/workflows/: publish.yml
dwpose/: __init__.py  util.py
example_workflow/: B-remapping.json  B-remapping1_SSsnap.json  B-remapping_SSsnap.json  fusion_x.json  wan2.1_fun_control.json
